# CompilerConstruction

./: .clang-format  .gitignore  .project  README.md  meson.build  setup.md
cc_team02/: .cproject  .gitignore  .project  CMakeLists.txt  README.md  meson.build  setup-wrapper
cc_team02/assembler/: links.md
cc_team02/assembler/sample/: add.c  simple.c
cc_team02/benchmark/: CMakeLists.txt  just_try.cpp
cc_team02/config/: CMakeLists.txt.in  README.md.in  assert_output.in  config.h  config.h.in  execute_bench.sh.in  gbenchmark.in  gtest.in  run_benchmarks.in  valgrind_libstdc++.so.6.0.21.supp.in  valgrind_libstdc++.so.6.0.25.supp.in
cc_team02/data/: buildins.c.in  buildins.mC.in
cc_team02/doc/: changes.md
cc_team02/doc/examples/: ackermann1.mC  ackermann1.mC.stdin  ackermann1.mC.stdout  ackermann2.mC  ackermann2.mC.stdout  ackermann3.mC  ackermann3.mC.stdout  array_calculations.mC  array_sum.mC  array_sum.mC.stdout  binary_search.mC  binary_search.mC.stdout  blocks.mC  blocks.mC.stdout  bubble_sort1.mC  bubble_sort2.mC  bubble_sort2.mC.stdin  bubble_sort2.mC.stdout  bubble_sort3.mC  bubble_sort3.mC.stdin  bubble_sort3.mC.stdout  check_age.mC  check_age.mC.stdout  circle_props.mC  circle_props.mC.stdout  diamond.mC.stdout  even.mC  even.mC.stdout  even_pi.mC  even_pi.mC.stdout  example_input1.mC  example_input1.mC.stdout  example_input2.mC  example_input2.mC.stdout  example_input3.mC  example_input3.mC.stdin  example_input3.mC.stdout  fac.mC  fac.mC.stdout  fem.mC  (+58 more)
cc_team02/doc/html/: annotated.html  ast_8h_source.html  ast__print_8h_source.html  ast__visit_8h_source.html  classes.html  dir_031c4fc26031de218e3c67acfca35073.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b7744615772f8de588fb11c864174757.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  index.html  parser_8h_source.html  structmCc__ast__assignment-members.html  structmCc__ast__assignment.html  structmCc__ast__compound__statement-members.html  structmCc__ast__compound__statement.html  structmCc__ast__declaration-members.html  structmCc__ast__declaration.html  structmCc__ast__expression-members.html  structmCc__ast__expression.html  structmCc__ast__function__call-members.html  structmCc__ast__function__call.html  structmCc__ast__function__def-members.html  structmCc__ast__function__def.html  structmCc__ast__identifier-members.html  structmCc__ast__identifier.html  structmCc__ast__literal-members.html  structmCc__ast__literal.html  structmCc__ast__node-members.html  structmCc__ast__node.html  structmCc__ast__program-members.html  structmCc__ast__program.html  structmCc__ast__source__location-members.html  structmCc__ast__source__location.html  structmCc__ast__statement-members.html  structmCc__ast__statement.html  structmCc__ast__visitor-members.html  structmCc__ast__visitor.html  structmCc__parser__result-members.html  structmCc__parser__result.html
cc_team02/doc/html/search/: all_0.js  classes_0.js
cc_team02/include/mCc/: assembly.h  ast.h  ast_print.h  ast_print_visitors.h  ast_tac.h  ast_tac_print.h  ast_tac_visitors.h  ast_visit.h  parser.h  semantic_check.h  symtab_build.h  symtab_check.h  symtab_handler.h  tac.h  tac_cfg.h  tac_cfg_print.h  tac_print.h
cc_team02/include/mCc/ast/: ast_assignment.h  ast_declaration.h  ast_expression.h  ast_function.h  ast_identifier.h  ast_literal.h  ast_operator.h  ast_program.h  ast_scope_info.h  ast_statement.h
cc_team02/include/mCc/general/: parser_helper.h  print_helper.h
cc_team02/include/mCc/symtab/: symbol_table.h  symtab_error_print.h  symtab_node.h  symtab_node_types.h  symtab_types.h
cc_team02/src/: CMakeLists.txt  ast.c  ast_print.c  ast_visit.c  parser.y  scanner.l
cc_team02/src/assembly/: assembly_generator.c  assembly_template.c
cc_team02/src/assembly/generator/: assembly_argument.c  assembly_arithmetic_op.c  assembly_array.c  assembly_assignment.c  assembly_binary_op_logical.c  assembly_declaration.c  assembly_function.c  assembly_general.c  assembly_jump.c  assembly_label.c  assembly_param.c  assembly_return.c  assembly_special.c  assembly_unary_op.c
cc_team02/src/ast/: ast_assignment.c  ast_declaration.c  ast_expression.c  ast_function.c  ast_identifier.c  ast_literal.c  ast_program.c  ast_statement.c
cc_team02/src/ast/basis/: ast_function.c  (+7 more)
cc_team02/src/general/: parser_helper.c  print_helper.c
cc_team02/src/include/: ast_print_visitors.h  ast_tac_visitors.h  symtab_check.h  symtab_handler.h
cc_team02/src/symtab/: symbol_table.c  symtab_build.c  symtab_check.c  symtab_error_print.c  symtab_node.c
cc_team02/src/tac/: tac_print.c  tac_utils.c
cc_team02/subprojects/: README.md
cc_team02/test/: CMakeLists.txt  assembly.cpp  assert_output  ast_build.cpp  builder.cpp  checks.cpp  integration  meson_integration_target  parser.cpp  printer.cpp  run_extended_unit_test  run_integration  symtab.cpp  tac_build.cpp  tac_cfg_print.cpp  tac_print.cpp  validator.cpp
cc_team02/test/assembly/: add_float_direct.mC  add_float_simple.mC  add_int_direct.mC  add_int_simple.mC  array_bool_assignment.mC  array_float_assignment.mC  array_int_assignment.mC  array_int_assignment_complex_index.mC  array_string_assignment.mC  array_string_assignment.mC.stdout  declaration_bool.mC  declaration_float.mC  declaration_float.mC.stdout  declaration_int.mC  declaration_string.mC  declaration_string.mC.stdout  div_float_chained.mC  div_float_chained.mC.stdout  div_float_direct.mC  div_float_simple.mC  div_float_simple.mC.stdout  div_int_chained.mC  div_int_direct.mC  div_int_simple.mC  func_nested_bool.mC  func_nested_complex.mC  func_nested_float.mC  func_nested_int.mC  func_nested_string.mC  func_with_array_bool_params.mC  func_with_array_float_params.mC  func_with_array_float_params.mC.stdout  func_with_array_int_params.mC  func_with_array_string_params.mC  func_with_array_string_params.mC.stdout  func_with_primitive_bool_params.mC  func_with_primitive_float_params.mC  func_with_primitive_float_params.mC.stdout  func_with_primitive_int_params.mC  func_with_primitive_string_params.mC  (+42 more)
cc_team02/test/utils/: CMakeLists.txt  mCc_test_utils.c
(+258 files in other folders)
